--- a/LABEL/Dockerfile
+++ b/LABEL/Dockerfile
@@ -1,4 +1,4 @@
 FROM almalinux:8
-LABEL COURSE:"DEVOPS"/
-      TRAINER:"ARUNA"/
-      DURATION:"120HRS"
+LABEL COURSE="DEVOPS"\
+      TRAINER="ARUNA"\
+      DURATION="120HRS"
